--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/animate.css">
-  <!--   <link rel="stylesheet" href="css/skeleton.css"> -->
+    <!--   <link rel="stylesheet" href="css/skeleton.css"> -->
 
 
 
@@ -138,7 +138,7 @@
                             Sunday
                         </h2>
                         <br />
-                        <h4 class="wow date fadeInUp fadeInUpBig" data-wow-delay=".5s">
+                        <h4 class="wow date fadeInUp fadeInDown" data-wow-delay=".5s">
                             12 OCT 2025
                         </h4>
                         <br />
@@ -244,8 +244,7 @@
             </div>
         </div>
 
-            <div class="row text-please">
-                <div class="col-12 text-center color-white wow fadeIn" data-wow-delay=".3s">
+                <div class="text-please text-center color-white wow fadeIn" data-wow-delay=".3s">
                     <p>
                         WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF
                     </p>
@@ -253,8 +252,9 @@
                         มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส
                     </p>
                 </div>
-            </div>
-            <div class="container">
+
+
+        <div class="container">
             <div class="row desc">
                 <div class="col-lg-6">
                     <div class="text text-center">
