cก้ css และ anime

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <!-- theme Section -->
     <section class="section theme" id="theme">
         <div class="section-title">
-            <h2 class="wow bounceInLeft lightSpeedInLeft" data-wow-delay=".3s">
+            <h2 class="wow bounceInLeft fadeInDown" data-wow-delay=".3s">
                 Theme Color
             </h2>
         </div>
@@ -203,7 +203,7 @@
     </section>
     <!-- couple Section -->
     <section class="section couple" id="couple">
-        <div class="wow section-title fadeIn fadeInDownBig" data-wow-delay=".3s">
+        <div class="wow section-title fadeIn fadeInDown" data-wow-delay=".3s">
             <h2>
                 ON BEHALF OF
             </h2>
@@ -258,7 +258,7 @@
             <div class="row desc">
                 <div class="col-lg-6">
                     <div class="text text-center">
-                        <h3 class="thai wow fadeIn kanit-extralight fadeInLeftBig" data-wow-delay=".4s">
+                        <h3 class="thai wow fadeIn kanit-extralight fadeInLeft" data-wow-delay=".4s">
                             นางสาว รัศมีบูหงา ศิวะบุณย์
                         </h3>
                         <h3 class="eng wow fadeIn" data-wow-delay=".4s">
@@ -269,7 +269,7 @@
                             &amp;
                         </h4>
                         <br />
-                        <h3 class="thai wow fadeIn kanit-extralight fadeInRightBig" data-wow-delay=".4s">
+                        <h3 class="thai wow fadeIn kanit-extralight fadeInRight" data-wow-delay=".4s">
                             นาย พันธกานต์ ไพทยะทัตย์
                         </h3>
                         <h3 class="eng wow fadeIn" data-wow-delay=".4s">
@@ -365,7 +365,7 @@
     <!-- Location Section -->
     <section class="section location" id="location">
         <div class="section-title">
-            <h2 class="wow fadeInUpBig" data-wow-delay=".3s">
+            <h2 class="wow fadeInUp" data-wow-delay=".3s">
                 Wedding Location
             </h2>
         </div>
@@ -402,7 +402,7 @@
     <section class="section hotel" id="hotel">
         <div class="container">
             <div class="section-title wow fadeIn" data-wow-delay=".3s">
-                <h2 class="wow fadeInDownBig" data-wow-delay=".3s">
+                <h2 class="wow fadeInDown" data-wow-delay=".3s">
                     Hotel
                 </h2>
             </div>
