--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
                         <img alt="Nikah" loading="lazy" src="image/nikah.jpg" />
                     </div>
                     <div class="wow fadeIn" data-wow-delay=".4s">
-                        <h2 class="wow wedding_events_title bounceInDown" data-wow-delay=".4s" data-wow-duration="3s">
+                        <h2 class="wow wedding_events_title margin bounceInDown" data-wow-delay=".4s" data-wow-duration="3s">
                             Nikah Ceremony
                         </h2>
                     </div>
                     <!-- Wedding Events Info -->
                     <div class="wow fadeIn" data-wow-delay=".5s">
-                        <div class="wow wedding_events_info fadeInDown" data-wow-delay=".5s" data-wow-duration="3s">
+                        <div class="wow wedding_events_info  fadeInDown" data-wow-delay=".5s" data-wow-duration="3s">
                             <h3>
                                 16:00 PM - 16:30 PM
                             </h3>
@@ -408,7 +408,7 @@
             </div>
             <div class="hotel-grid">
                 <!-- โรงแรมที่ 1 -->
-                <div class="wow org-card fadeInLeft flipInY" data-wow-delay=".4s">
+                <div class="wow org-card fadeInLeft " data-wow-delay=".4s">
                     <a class="no-underline" href="https://maps.app.goo.gl/D7DcF4CYwCTSXcac8" target="_blank">
                         <img alt="ริมขอบฟ้าเออร์เบินรีสอร์ท " class="org-logo" loading="lazy" src="./image/hotel.jpg" />
                         <h2 class="org-name kanit-extralight">
