--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
             </div>
         </div>
 
-                <div class="text-please text-center color-white wow fadeIn" data-wow-delay=".3s">
-                    <p>
+                <div class="text-please text-center color-white">
+                    <p  class="wow fadeIn" data-wow-delay=".3s">
                         WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF
                     </p>
-                    <p class="kanit-extralight">
+                    <p class="kanit-extralight wow fadeIn" data-wow-delay=".3s">
                         มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส
                     </p>
                 </div>
