--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
             <div class="text wow fadeInDown" data-wow-delay=".3s">
                 New chapter begins
             </div>
-            <div class="wow text line fadeInUp bounceIn fadeInRight" data-wow-delay=".6s">
+            <div class="wow text line  bounceIn fadeInUp" data-wow-delay=".6s">
                 Save The Date
             </div>
             <div class="text wow fadeInDown" data-wow-delay=".3s">
                 OCTOBER 12, 2025
             </div>
-            <p class="wow fadeIn lightSpeedIn" data-wow-delay=".7s">
+            <p class="wow fadeIn " data-wow-delay=".7s">
                 You are invited to our wedding ceremony and to the celebration of
                 our marriage. Don&rsquo;t miss to meet us and we hope to see you on our special day.
             </p>
@@ -191,33 +191,33 @@
     <!-- theme Section -->
     <section class="section theme" id="theme">
         <div class="section-title">
-            <h2 class="wow bounceInLeft fadeInDown" data-wow-delay=".3s">
+            <h2 class="wow  fadeInDown" data-wow-delay=".3s">
                 Theme Color
             </h2>
         </div>
         <div class="container">
-            <div class="wow theme-color bounceInRight zoomIn" data-wow-delay=".5s">
+            <div class="wow theme-color  fadeInUp" data-wow-delay=".5s">
                 <img alt="Couple photo" loading="lazy" src="./image/theme.png" />
             </div>
         </div>
     </section>
     <!-- couple Section -->
     <section class="section couple" id="couple">
-        <div class="wow section-title fadeIn fadeInDown" data-wow-delay=".3s">
+        <div class="wow section-title  fadeInDown" data-wow-delay=".3s">
             <h2>
                 ON BEHALF OF
             </h2>
         </div>
         <div class="container text-center">
             <div class="row">
-                <div class="col-12 text-center heading">
+             <!--    <div class="col-12 text-center heading">
                     <h2>
                     </h2>
-                </div>
+                </div> -->
             </div>
             <div class="row couple-wrap">
                 <div class="col-12 col-lg-5 clearfix wow fadeInLeft" data-wow-delay=".3s">
-                    <div class="wow desc-groom slideInLeft" data-wow-delay=".4s">
+                    <div class="wow desc-groom ">
                         <h3>
                             Bride&rsquo;s Parent
                         </h3>
@@ -227,12 +227,12 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-2 clearfix  wow fadeInUp" data-wow-delay=".3s">
-                    <h4 class="heart wow pulse" data-wow-iteration="60">
+                    <h4 class="heart ">
                         AND
                     </h4>
                 </div>
                 <div class="groom-wrap col-12 col-lg-5 wow fadeInRight" data-wow-delay=".3s">
-                    <div class="desc-bride wow slideInRight" data-wow-delay=".4s">
+                    <div class="desc-bride  " >
                         <h3>
                             Groom&rsquo;s Parent
                         </h3>
