--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
     <!-- Google Fonts: Async preload + fallback -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kanit&family=Julius+Sans+One&display=swap"
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kanit&family=Julius+Sans+One&family=Great+Vibes&family=Sail&display=swap"
         as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Sail&display=swap" rel="stylesheet">
-    <noscript>
-        <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Julius+Sans+One&display=swap"
-            rel="stylesheet">
-    </noscript>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -210,7 +205,7 @@
         </div>
         <div class="container text-center">
             <div class="row">
-             <!--    <div class="col-12 text-center heading">
+                <!--    <div class="col-12 text-center heading">
                     <h2>
                     </h2>
                 </div> -->
@@ -232,7 +227,7 @@
                     </h4>
                 </div>
                 <div class="groom-wrap col-12 col-lg-5 wow fadeInRight" data-wow-delay=".3s">
-                    <div class="desc-bride  " >
+                    <div class="desc-bride  ">
                         <h3>
                             Groom&rsquo;s Parent
                         </h3>
@@ -244,14 +239,14 @@
             </div>
         </div>
 
-                <div class="text-please text-center color-white">
-                    <p  class="wow fadeIn" data-wow-delay=".3s">
-                        WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF
-                    </p>
-                    <p class="kanit-extralight wow fadeIn" data-wow-delay=".3s">
-                        มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส
-                    </p>
-                </div>
+        <div class="text-please text-center color-white">
+            <p class="wow fadeIn" data-wow-delay=".3s">
+                WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF
+            </p>
+            <p class="kanit-extralight wow fadeIn" data-wow-delay=".3s">
+                มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส
+            </p>
+        </div>
 
 
         <div class="container">
@@ -321,7 +316,8 @@
                         <img alt="Nikah" loading="lazy" src="image/nikah.jpg" />
                     </div>
                     <div class="wow fadeIn" data-wow-delay=".4s">
-                        <h2 class="wow wedding_events_title margin bounceInDown" data-wow-delay=".4s" data-wow-duration="3s">
+                        <h2 class="wow wedding_events_title margin bounceInDown" data-wow-delay=".4s"
+                            data-wow-duration="3s">
                             Nikah Ceremony
                         </h2>
                     </div>
@@ -488,7 +484,6 @@
                                 <i class="fa fa-search-plus">
                                 </i>
                             </div>
-                            </img>
                         </div>
                     </a>
                     <a class="gallery-item" data-lightbox="wedding-gallery" href="gallery/gallery6.jpg">
@@ -498,7 +493,6 @@
                                 <i class="fa fa-search-plus">
                                 </i>
                             </div>
-                            </img>
                         </div>
                     </a>
                     <a class="gallery-item" data-lightbox="wedding-gallery" href="gallery/gallery5.jpg">
@@ -508,7 +502,6 @@
                                 <i class="fa fa-search-plus">
                                 </i>
                             </div>
-                            </img>
                         </div>
                     </a>
                     <a class="gallery-item" data-lightbox="wedding-gallery" href="gallery/gallery2.jpg">
@@ -518,7 +511,6 @@
                                 <i class="fa fa-search-plus">
                                 </i>
                             </div>
-                            </img>
                         </div>
                     </a>
                     <a class="gallery-item" data-lightbox="wedding-gallery" href="gallery/gallery3.jpg">
@@ -528,7 +520,6 @@
                                 <i class="fa fa-search-plus">
                                 </i>
                             </div>
-                            </img>
                         </div>
                     </a>
                     <a class="gallery-item" data-lightbox="wedding-gallery" href="gallery/gallery7.jpg">
