แก้ css desc img

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 
     <!-- Preload Hero Background -->
-    <link rel="preload" as="image" href="image/hero-background.webp">
+    <link rel="preload" as="image" href="image/hero-background.jpg">
 
 
     <!-- Css -->
