--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- Google Fonts: Async preload + fallback -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kanit&family=Julius+Sans+One&family=Great+Vibes&family=Sail&display=swap"
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Kanit&family=Julius+Sans+One&family=Great+Vibes&family=Sail&display=swap"
         as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <!-- Bootstrap CSS -->
@@ -35,7 +36,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/animate.css">
-    <!--   <link rel="stylesheet" href="css/skeleton.css"> -->
+
 
 
 
@@ -59,7 +60,6 @@
                     Events
                 </a>
             </li>
-            <!-- <li><a href="#about">Our Story</a></li>-->
             <li>
                 <a href="#location">
                     Location
@@ -90,8 +90,6 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <!-- <h1 class="wow fadeInUp" data-wow-delay=".2s">We're Getting Married</h1> -->
-            <!-- <div class="divider"></div> -->
             <div class="wow couple-names fadeInUp great-vibes-regular zoomIn" data-wow-delay=".3s">
                 YokePan
             </div>
@@ -204,12 +202,6 @@
             </h2>
         </div>
         <div class="container text-center">
-            <div class="row">
-                <!--    <div class="col-12 text-center heading">
-                    <h2>
-                    </h2>
-                </div> -->
-            </div>
             <div class="row couple-wrap">
                 <div class="col-12 col-lg-5 clearfix wow fadeInLeft" data-wow-delay=".3s">
                     <div class="wow desc-groom ">
@@ -608,9 +600,9 @@
             Yoke &amp; Pan
         </div>
         <ul class="social-links">
-            <!-- <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
+            <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
         </ul>
         <p class="copyright">
             &copy; 2025 Pre Website for Wedding. All Rights Reserved.
