--- a/index.html
+++ b/index.html
@@ -599,11 +599,11 @@
         <div class="footer-logo">
             Yoke &amp; Pan
         </div>
-        <ul class="social-links">
+<!--         <ul class="social-links">
             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
             <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-        </ul>
+        </ul> -->
         <p class="copyright">
             &copy; 2025 Pre Website for Wedding. All Rights Reserved.
         </p>
