--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 </head>
 
 <body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="preloader-spinner">
+            <img src="image/preloader.svg" alt="Loading..." />
+        </div>
+    </div>
+
+
     <!-- Navigation -->
     <nav class="navbar">
         <a class="great-vibes-regular logo" href="#">
@@ -443,11 +451,24 @@
                     <h5 class="padding kanit-extralight">
                         แบบตอบรับการเข้าร่วมงาน
                     </h5>
-                    <iframe frameborder="0" height="100%" loading="lazy" marginheight="50px" marginwidth="0"
-                        src="https://script.google.com/macros/s/AKfycbyfp3d3Pt6JDbLFcZ1bg5sm8wh1Mzdjy3k3QnDce2mOOy-mfjdZe6g9TcOxINTWcmc/exec"
-                        style="min-height: 500px; border-radius: 20px;" width="100%">
-                        กำลังโหลด&hellip;
-                    </iframe>
+                    <div class="iframe-wrapper" style="position: relative;">
+                        <div id="iframe-loader" class="spinner">
+                            <div class="lds-ring">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                        <iframe id="rsvp-form" frameborder="0" height="100%" loading="lazy" marginheight="50px"
+                            marginwidth="0"
+                            src="https://script.google.com/macros/s/AKfycbyfp3d3Pt6JDbLFcZ1bg5sm8wh1Mzdjy3k3QnDce2mOOy-mfjdZe6g9TcOxINTWcmc/exec"
+                            style="min-height: 500px; border-radius: 20px; width: 100%;">
+                        </iframe>
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
@@ -543,7 +564,7 @@
                     </a>
                 </div>
             </div>
-            <div class="row">
+            <div class="row special-gallery">
                 <div class="col-lg-12">
                     <div class="section-title">
                         <h2>
@@ -599,7 +620,7 @@
         <div class="footer-logo">
             Yoke &amp; Pan
         </div>
-<!--         <ul class="social-links">
+        <!--         <ul class="social-links">
             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
             <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
